--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "bootstrap": "~4.4.1",
     "react-icons": "~3.9.0",
     "react-csv-reader": "~2.0.2",
-    "react-csv": "~2.0.1"
+    "react-csv": "~2.0.1",
+    "pg": "~7.18.2",
+    "dotenv": "~8.2.0"
   },
   "devDependencies": {
     "electron": "^8.0.1",
