--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "react-csv-reader": "~2.0.2",
     "react-csv": "~2.0.1",
     "pg": "~7.18.2",
-    "dotenv": "~8.2.0"
+    "dotenv": "~8.2.0",
+    "highcharts-react-official": "~3.0.0",
+    "highcharts": "~8.0.4",
+    "uuid": "~7.0.3"
   },
   "devDependencies": {
     "electron": "^8.0.1",
